[package]
name = "stats-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"]}
futures-io = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
tokio =  { version = "1.37.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
regex = "1.10.4"
dotenv = "0.15.0"
chrono = "0.4.37"
rusqlite = { version = "0.31.0", features = ["bundled"]}
http = "1.1.0"
lazy_static = "1.4.0"
